<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="84dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackgroundBorderless">

    <ImageView
        android:id="@+id/item_mail_image"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/avatar"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@tools:sample/avatars"/>

    <TextView
        android:id="@+id/item_mail_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/mail_title"
        android:textColor="?text_color"
        android:textStyle="bold"
        android:maxLines="1"
        android:ellipsize="end"
        app:layout_constraintStart_toEndOf="@id/item_mail_image"
        app:layout_constraintEnd_toStartOf="@id/item_mail_date"
        app:layout_constraintTop_toTopOf="@id/item_mail_image"/>

    <TextView
        android:id="@+id/item_mail_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/mail_description"
        android:textColor="?text_second_color"
        android:textStyle="bold"
        android:maxLines="1"
        android:ellipsize="end"
        app:layout_constraintStart_toEndOf="@id/item_mail_image"
        app:layout_constraintEnd_toStartOf="@+id/item_mail_favorite"
        app:layout_constraintTop_toBottomOf="@id/item_mail_title"/>

    <TextView
        android:id="@+id/item_mail_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textColor="?text_second_color"
        android:maxLines="1"
        android:ellipsize="end"
        android:text="@string/content"
        app:layout_constraintEnd_toStartOf="@+id/item_mail_favorite"
        app:layout_constraintStart_toEndOf="@id/item_mail_image"
        app:layout_constraintTop_toBottomOf="@id/item_mail_description"/>

    <TextView
        android:id="@+id/item_mail_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="?text_color"
        android:layout_marginEnd="16dp"
        android:text="@string/date"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/item_mail_title"/>

    <ImageView
        android:id="@+id/item_mail_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/favorite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/item_mail_description"
        app:layout_constraintTop_toBottomOf="@+id/item_mail_date"
        app:srcCompat="@drawable/ic_baseline_star_border_24"
        app:tint="?nav_icon_tint"
        tools:ignore="ImageContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>