<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="76dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackgroundBorderless">

    <ImageView
        android:id="@+id/item_category_image"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/tag"
        android:padding="8dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="#4CAF50"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@drawable/ic_outline_local_offer_24" />

    <TextView
        android:id="@+id/item_category_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/category_name"
        android:textColor="?text_color"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/item_category_image"
        app:layout_constraintTop_toTopOf="@+id/item_category_image"
        app:layout_constraintWidth_default="wrap"/>

    <TextView
        android:id="@+id/item_category_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:lineSpacingExtra="4sp"
        android:text="@string/category_description"
        android:textColor="?text_color"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/item_category_image"
        app:layout_constraintTop_toBottomOf="@+id/item_category_title"
        app:layout_constraintWidth_default="wrap"/>


    <TextView
        android:id="@+id/item_category_counter"
        android:layout_width="52dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_cat_counter"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        android:text="@string/_category_counter"
        android:textAlignment="center"
        android:textColor="#263238"
        android:textSize="11sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@id/item_category_title"
        app:layout_constraintTop_toTopOf="@id/item_category_title" />

</androidx.constraintlayout.widget.ConstraintLayout>