<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardUseCompatPadding="true"
    android:layout_width="match_parent"
    android:layout_height="58dp"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardBackgroundColor="?fab_bg_color">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/menu_icon"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/menu"
            android:src="@drawable/ic_baseline_menu_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="?nav_icon_tint"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center|start"
            android:background="@android:color/transparent"
            android:textColorHint="?nav_icon_tint"
            android:layout_marginStart="36dp"
            android:hint="@string/search_in_mail"
            android:minWidth="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/search_icon"
            app:layout_constraintStart_toStartOf="@+id/menu_icon"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlSymmetry" />

        <ImageView
            android:id="@+id/search_icon"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_margin="8dp"
            android:contentDescription="@string/searching"
            android:src="@drawable/user3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>


